[package]
name = "sandbox-rust-release-by-ci"
version = "0.1.4"
authors = ["linnefromice <linnefromice@gmail.com>"]
description = "A sample Rust project for demonstrating CI-based release workflow"
license = "MIT"
repository = "https://github.com/linnefromice/sandbox-rust-release-by-ci"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
